--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/simondadiamond/techn9-media/blob/63ff8bc48fd105deb4e4c68265ef1610e19d6818/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://github.com/simondadiamond/techn9-media/blob/63ff8bc48fd105deb4e4c68265ef1610e19d6818/favicon-16x16.png?raw=true">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
     <title>Techn9</title>
